--- a/ios/.gitignore
+++ b/ios/.gitignore
@@ -1,29 +1,30 @@
-**/dgph
+# Ignorowanie plików generowanych automatycznie
+**/Pods/**
+**/DerivedData/**
+**/build/**
+**/.symlinks/
+**/.vagrant/
+**/.sconsign.dblite
+**/.tags*
+**/.generated/
+**/xcuserdata/
+
+# Pliki lokalne i ustawienia IDE
 *.mode1v3
 *.mode2v3
 *.moved-aside
 *.pbxuser
 *.perspectivev3
-**/*sync/
-.sconsign.dblite
-.tags*
-**/.vagrant/
-**/DerivedData/
-Icon?
-**/Pods/
-**/.symlinks/
-profile
-xcuserdata
-**/.generated/
-Flutter/App.framework
-Flutter/Flutter.framework
-Flutter/Flutter.podspec
-Flutter/Generated.xcconfig
-Flutter/ephemeral/
-Flutter/flutter_export_environment.sh
-Runner/GeneratedPluginRegistrant.*
+*.xcworkspace/
+*.xcuserdata/
+*.xcscheme
 
-# Exceptions to above rules.
+# Pliki tymczasowe
+*.swp
+*.DS_Store
+*.log
+
+# Wyjątki - zachowaj konkretne pliki
 !default.mode1v3
 !default.mode2v3
 !default.pbxuser
